# albums-python

./: .env  .env.example  .flake8  .gitignore  main.py  pyproject.toml  readme.md
albums_python/: app.py
albums_python/client/: database.py  ssm.py
albums_python/defs/: album_genres.py  constants.py  database_defs.py  env.py  environment.py  user_defs.py
albums_python/domain/: album_genres.py  albums.py  database.py  environment.py  users.py  utils.py
albums_python/domain/models/: database.py
albums_python/query/: album_genre_queries.py  album_queries.py  albums.py  genre_queries.py  session.py  user_queries.py
albums_python/query/models/: __init__.py  album.py  album_genre.py  genre.py  model.py  user.py
albums_python/service/: album_genres_controller.py  albums.py  albums_controller.py  genres_controller.py  jwt.py  users_controller.py
albums_python/service/decorators/: jwt.py
albums_python/service/models/: album_genre_schemas.py  album_schemas.py  genre_schemas.py  http.py  response.py  user_schemas.py
run/: deploy  format
tests/: conftest.py  utils.py
tests/domain/: test_album_genres.py  test_albums.py  test_users.py
tests/query/: test_album_genre_queries.py  test_album_queries.py  test_genre_queries.py  test_user_queries.py
tests/service/: test_album_genres_controller.py  test_albums_controller.py  test_genres_controller.py  test_jwt.py  test_users_controller.py
tests/utils/: albums.py  base.py  users.py
