[tool.poetry]
name = "albums-python"
version = "0.1.0"
description = ""
authors = ["Eric Harm <ericharm@gmail.com>"]
readme = "readme.md"
packages = [{include = "albums_python"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
mypy = "^1.11.2"
isort = "^5.13.2"
flake8 = "^7.1.1"
black = "^24.8.0"
boto3 = "^1.35.33"
mypy-boto3-ssm = "^1.35.21"
sqlalchemy = "^2.0.35"
marshmallow-dataclass = "^8.7.1"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
passlib = "^1.7.4"
jwt = "^1.3.1"
pyjwt = "^2.9.0"
bcrypt = "^4.2.0"

[tool.poetry.dev-dependencies]
faker = "^30.3.0"
freezegun = "^1.5.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[tool.coverage.report]
include = ["albums_python/*.py"]
show_missing = true

[tool.black]
line-length = 100

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.mypy]
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

