[tool.poetry]
name = "albums-python"
version = "0.1.0"
description = "API for a record collection"
authors = ["Eric Harm <ericharm@gmail.com>"]
readme = "readme.md"
packages = [{include = "albums_python"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
mypy = "^1.11.2"
isort = "^5.13.2"
flake8 = "^7.1.1"
black = "^24.8.0"
marshmallow-dataclass = "^8.7.1"
psycopg2 = "^2.9.9"
passlib = "^1.7.4"
jwt = "^1.3.1"
pyjwt = "^2.9.0"
bcrypt = "^4.2.0"
webargs = "^8.6.0"
python-dotenv = "^1.0.1"
flask-cors = "^5.0.0"
peewee = "^3.17.6"
psycopg2-binary = "^2.9.10"

[tool.poetry.dev-dependencies]
faker = "^30.3.0"
freezegun = "^1.5.1"
mypy-boto3-ssm = "^1.35.21"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
types-passlib = "^1.7.7.20240819"
types-peewee = "^3.17.6.20240813"
types-python-dateutil = "^2.9.0.20241003"
zappa = "^0.59.0"

[tool.pytest.ini_options]
addopts = "-v --cov=albums_python --cov-report=term-missing"

[tool.black]
line-length = 100

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.mypy]
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

