[project]
name = "albums-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
packages = [{include = "albums_python"}]
dependencies = [
    "bcrypt>=4.2.0",
    "flask>=3.0.3",
    "flask-cors>=5.0.0",
    "jwt>=1.3.1",
    "marshmallow-dataclass>=8.7.1",
    "passlib>=1.7.4",
    "peewee>=3.17.6",
    "psycopg2>=2.9.9",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.9.0",
    "python-dotenv>=1.0.1",
    "webargs>=8.6.0",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "faker>=36.1.1",
    "flake8>=7.1.1",
    "freezegun>=1.5.1",
    "isort>=5.13.2",
    "mypy>=1.15.0",
    "mypy-boto3-ssm>=1.37.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "types-passlib>=1.7.7.20241221",
    "types-peewee>=3.17.9.20250210",
    "types-python-dateutil>=2.9.0.20241206",
    "zappa>=0.59.0",
]

[tool.pytest.ini_options]
addopts = "-v --cov=albums_python --cov-report=term-missing"

[tool.black]
line-length = 100

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.mypy]
disallow_untyped_defs = true
